--- a/course-04/project/c4-final-project-starter-code/backend/package.json
+++ b/course-04/project/c4-final-project-starter-code/backend/package.json
@@ -5,10 +5,11 @@
   "dependencies": {
     "@types/axios": "^0.14.0",
     "@types/http-errors": "^1.6.1",
-    "aws-xray-sdk": "^2.2.0",
+    "aws-xray-sdk": "^3.3.7",
     "axios": "^0.18.0",
     "http-errors": "^1.7.2",
     "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^2.1.4",
     "middy": "^0.27.0",
     "source-map-support": "^0.5.11",
     "uuid": "^3.3.2",
@@ -16,6 +17,8 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
+    "@types/express": "^4.17.14",
+    "@types/express-serve-static-core": "4.17.20",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/node": "^10.14.4",
     "aws-sdk": "^2.433.0",
@@ -26,7 +29,7 @@
     "serverless-reqvalidator-plugin": "^1.0.3",
     "serverless-webpack": "^5.2.0",
     "ts-loader": "^5.3.3",
-    "typescript": ">=3.8.0",
+    "typescript": "3.8.3",
     "webpack": "^4.29.6"
   },
   "author": "Ivan Mushketyk",
